# ClubOS

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  REPO_STRUCTURE.md  databricks.yml  requirements.txt
backend/api/: .env.example  README.md  pyproject.toml
backend/api/app/: main.py
backend/api/app/clients/: databricks.py
backend/api/app/config/: scoring_config.json  settings.py
backend/api/app/routers/: __init__.py  analytics.py  benchmark.py  briefing.py  config.py  connectors.py  events.py  health.py  notifications.py  priorities.py  refresh.py  signals.py  social.py
backend/api/app/schemas/: benchmark.py  briefing.py  content_intelligence.py  events.py  health.py  priorities.py  refresh.py  signals.py  social.py  social_benchmark.py
backend/api/app/services/: anomaly_context_service.py  benchmark_service.py  briefing_service.py  connector_service.py  content_intelligence_service.py  conversion_context_service.py  event_service.py  format_utils.py  (+10 more)
backend/api/tests/: test_anomaly_context.py  test_api_contracts.py  test_audit_fixes.py  test_content_intelligence.py  test_conversion_context.py  test_events.py  test_health.py  test_international.py  test_priority_badge_counts.py  test_priority_enrichment.py  test_scoring_config_integration.py  test_scoring_fix.py  test_seasonal.py  test_signal_labels.py  test_snapshot_mode.py  test_social.py  test_social_analytics.py  test_social_anomalies.py  test_social_benchmark.py  test_social_benchmark_wiring.py  test_social_priority.py  test_social_signals.py
(+172 files in other folders)
