[project]
name = "clubos-api"
version = "0.1.0"
description = "Backend API for ClubOS"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.3.4",
  "httpx==0.27.2",
  "openpyxl==3.1.5",
  "pandas==2.2.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
